--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
      font-family: iransans!important;
      font-size: 14px;
  }
+ form {border: 3px solid #f1f1f1;}
 .CustomBtn{
     height: 64px;
     width: 100px;
@@ -222,4 +223,90 @@ a[data-toggle='modal']{
       direction: rtl;
       text-align: center;
 
+  }
+  .button_show{
+      padding-top: 24px;
+      padding-left: 24px;
+  }
+  .main_table{
+      width: 250px;
+      height: 250px;
+      box-shadow: 0px 2px 16px 2px #c0c0c0;
+      background-color: #fff;
+      margin: 24px;
+      float: left;
+  }
+  form {border: 3px solid #f1f1f1;}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  direction: rtl;
+}
+
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 16%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+.title{
+    display: flex;
+    justify-content: center;
+    padding: 24px;
+}
+.canceling{
+    margin-right: 324px;
+}
+.avatar{
+    border-radius: 50%;
+}
+
+
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
   }
